--- a/src/main/resources/templates/cdn/cdn.base.html
+++ b/src/main/resources/templates/cdn/cdn.base.html
@@ -2,6 +2,7 @@
 <link href="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/toastr/toastr.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/font-awesome/4.7/css/font-awesome.min.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/viewer/viewer.min.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/gull/css/lite-purple-cus.css" rel="stylesheet" />
 
 <script src="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/jquery/jquery.js" ></script>
@@ -9,6 +10,7 @@
 <script src="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/toastr/toastr.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/cqto/cqto.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/layer/layer.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/viewer/viewer.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/gh/mqcc08/plugins@v1.0.102/fly-zomm/fly-zomm-img.js" ></script>
 
 
